--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "dalthianlauncher",
+  "name": "noelauncher",
   "version": "2.1.1",
-  "productName": "Dalthian Launcher",
-  "description": "Ceci est le launcher de DalthianRP",
+  "productName": "N.O.E.",
+  "description": "Ceci est le launcher de N.O.E.",
   "author": "Daniel Scalzi (https://github.com/dscalzi/) et Thermidoren",
   "license": "UNLICENSED",
   "homepage": "https://github.com/Thermidoren/DalthianLauncher",
